--- a/index.html
+++ b/index.html
@@ -12,95 +12,137 @@
       <div class="container">
         <div class="header-content">
           <a href="#">
-            <img src="./assets/img/logo.svg" alt="logo" />
+            <img src="./assets/img/logo.svg" alt="Logo" />
           </a>
           <nav class="navbar">
             <ul>
               <li>
-                <a href="#">Free designs </a>
-                <ul>
-                  <li>
-                    <a href="#">Menu 1</a>
-                  </li>
-                  <li>
-                    <a href="#">Menu 2</a>
-                  </li>
-                  <li>
-                    <a href="#">Menu 3</a>
-                  </li>
-                  <li>
-                    <a href="#">Menu 4</a>
-                  </li>
-                </ul>
+                <a href="#">Free designs</a>
               </li>
               <li>
-                <a href="#">License </a>
+                <a href="#">License</a>
               </li>
               <li>
-                <a href="#">Articles </a>
+                <a href="#">Articles</a>
               </li>
               <li>
-                <a href="#">Contributors </a>
+                <a href="#">Contributors</a>
               </li>
               <li>
-                <a href="#">About </a>
+                <a href="#">About</a>
               </li>
             </ul>
           </nav>
+
           <div>
-            <button class="btn">Log In</button>
+            <button class="btn">Log in</button>
             <button class="btn btn-dark btn-round">Sign Up</button>
           </div>
         </div>
       </div>
     </header>
-    <div class="homepage">
-      <section>
-        <h1>Free UI resources for everyone</h1>
-        <p>
-          The largest database of 100% free UI components and designs available
-          in the formats popular by UI designers.
-        </p>
-        <div class="homepage-search">
-          <form action="">
-            <select name="designs">
-              <option value="Free designs">Free designs</option>
+    <main>
+      <div class="container">
+        <div class="main-content">
+          <h1>Free UI resources for everyone</h1>
+          <p>
+            The largest database of 100% free UI components and designs
+            available in the formats popular by UI designers.
+          </p>
+          <div class="search">
+            <select name="option">
+              <option>Free designs</option>
             </select>
-            <div class="search">
-              <figure>
-                <img src="./assets/img/lens.svg" alt="" />
-                <input type="text" placeholder="Search   " />
-              </figure>
-            </div>
-          </form>
+            <img src="./assets/img/lens.svg" alt="lens" />
+            <input type="text" placeholder="Search" />
+          </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </main>
     <footer>
-      <div class="footer-content">
-        <div class="box-tab">
-          <a href="#" class="tab-link">Latest</a>
-          <a href="#" class="tab-link">Popular</a>
+      <div class="container">
+        <div class="footer-head">
+          <div class="button">
+            <button class="latest">Latest</button>
+            <button class="popular">Popular</button>
+          </div>
+          <div class="navbar">
+            <ul>
+              <li>
+                <a href="#">All</a>
+              </li>
+              <li>
+                <a href="#">Web</a>
+              </li>
+              <li>
+                <a href="#">Mobile</a>
+              </li>
+              <li>
+                <a href="#"> UI Kit</a>
+              </li>
+              <li>
+                <a href="#">Coded</a>
+              </li>
+            </ul>
+          </div>
+          <div class="figure">
+            <span>
+              <img src="./assets/img/figma.svg" alt="" />
+            </span>
+            <span>
+              <img src="./assets/img/diamond.svg" alt="" />
+            </span>
+            <span>
+              <img src="./assets/img/red square.svg" alt="" />
+            </span>
+            <span>
+              <img src="./assets/img/xd.svg" alt="" />
+            </span>
+            <span>
+              <img src="./assets/img/ps.svg" alt="" />
+            </span>
+          </div>
         </div>
-        <nav class="navbar">
-          <ul>
-            <li>
-              <a href="#">All </a>
-            </li>
-            <li>
-              <a href="#">WEB </a>
-            </li>
-            <li>
-              <a href="#">Mobile </a>
-            </li>
-            <li>
-              <a href="#">UI Kit </a>
-            </li>
-            <li>
-              <a href="#">Coded</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="footer-main">
+          <div class="card-item">
+            <a href="#">
+              <img src="./assets/img/grey screen.svg" alt="grey screen" />
+            </a>
+          </div>
+          <div class="description">
+            <figure>
+              <img src="./assets/img/jenna.svg" alt="" />
+            </figure>
+            <p>by <b>Jenny Molla </b></p>
+            <span>
+              <img src="./assets/img/less more.svg" alt="" />
+              <p>25</p>
+            </span>
+            <span>
+              <img src="./assets/img/give five.svg" alt="" />
+              <p>25</p>
+            </span>
+          </div>
+          <div class="card-item">
+            <a href="#">
+              <img src="./assets/img/dark screen.svg" alt="dark screen" />
+            </a>
+          </div>
+          <div class="description">
+            <figure>
+              <img src="./assets/img/jenna.svg" alt="" />
+            </figure>
+            <p>by <b>Jenny Molla </b></p>
+            <span>
+              <img src="./assets/img/less more.svg" alt="" />
+              <p>25</p>
+            </span>
+            <span>
+              <img src="./assets/img/give five.svg" alt="" />
+              <p>25</p>
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
